--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "biblioteca-libros",
+  "name": "book-shop",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
+    "i18next": "^23.7.12",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
     "react-router-dom": "^6.20.1",
     "uuid": "^9.0.1"
   },
